Open the web panel when Pətək starts without a command
The terminal start menu is gone: petek (IntelliJ's run icon) now runs the new
panel command, which serves the six-screen web panel on 127.0.0.1 and opens it
in the browser. AppPanelBackend connects capacity advice, the campaign files of
scenarios/, runs with the live board, run summaries and reports; without a .env
the panel runs against the in-process fake KadroHR. JavaExec tasks run from the
project root so IntelliJ's run icon finds .env, scenarios/ and evidence/.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>